# ocaml-opus

./: .gitignore  .travis-ci.sh  .travis.yml  CHANGES  CHANGES.md  Makefile.in  README.md  configure.ac  dune-project  index.html  opus.opam
.github/workflows/: doc.yml
examples/: .merlin  Makefile  Makefile.opus2wav.in  dune  opus2wav.ml  wav2opus.ml
opus/: index.html
opus/Opus/: index.html
opus/Opus/Decoder/: index.html
opus/Opus/Encoder/: index.html
opus/Opus_decoder/: index.html
src/: META.in  Makefile.in  dune  ogg_demuxer_opus_decoder.ml  ogg_demuxer_opus_decoder.mli  opus.ml  opus.mli  opus_decoder.ml  opus_stubs.c
test/: dune  gen_wav.ml
