opam-version: "2.0"
name: "opus"
version: "0.1.3"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-opus"
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix]
  [make "clean"] {dev}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "ocamlfind" {build}
  "ogg"
]
depexts: [
  ["opus-dev"] {os-distribution = "alpine"}
  ["opus"] {os-distribution = "arch"}
  ["libopus-dev"] {os-family = "debian"}
  ["opus-devel"] {os-distribution = "centos"}
  ["opus-devel"] {os-distribution = "fedora"}
  ["libopus-devel"] {os-family = "suse"}
  ["libopus"] {os-distribution = "nixos"}
  ["opus"] {os = "macos" & os-distribution = "homebrew"}
]
bug-reports: "https://github.com/savonet/ocaml-opus/issues"
dev-repo: "git+https://github.com/savonet/ocaml-opus.git"
synopsis:
  "Bindings for the opus library to decode audio files in opus format"
